--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,27 +5,24 @@ package:
   version: {{ version }}
 
 source:
-  url: http://download.osgeo.org/proj/proj-{{ version }}.tar.gz
-  sha256: a792f78897482ed2c4e2af4e8a1a02e294c64e32b591a635c5294cb9d49fdc8c
+  - url: http://download.osgeo.org/proj/proj-{{ version }}.tar.gz
+    sha256: a792f78897482ed2c4e2af4e8a1a02e294c64e32b591a635c5294cb9d49fdc8c
+  - url: http://download.osgeo.org/proj/proj-datumgrid-1.6.zip
+    folder: nad
 
 build:
-  number: 0
-  skip: True  # [win and py36]
-  features:
-    - vc9  # [win and py27]
-    - vc14  # [win and (py35 or py36)]
+  number: 5
+  run_exports:
+    # so name changes in bugfix revisions.  Pin to bugfix revision.
+    #    https://abi-laboratory.pro/tracker/timeline/proj/
+    - {{ pin_subpackage('proj4', max_pin='x.x.x') }}
 
 requirements:
   build:
-    - python  # [win]
     - cmake  # [win]
     - unzip  # [not win]
-    - curl  >=7.44.0,<8
-    - vc 9  # [win and py27]
-    - vc 14  # [win and (py35 or py36)]
-  run:
-    - vc 9  # [win and py27]
-    - vc 14  # [win and (py35 or py36)]
+    - curl
+    - {{ compiler('c') }}
 
 test:
   commands:
@@ -48,3 +45,4 @@ extra:
   recipe-maintainers:
     - ocefpaf
     - pelson
+    - msarahan
