--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,25 +10,20 @@ source:
   sha256: 6984542fea333488de5c82eea58d699e4aff4b359200a9971537cd7e047185f7
 
 build:
-  number: 4
+  number: 5
   features:
-    - vc9  # [win and py27]
-    - vc10  # [win and py34]
-    - vc14  # [win and py>=35]
+    - vc{{ vc }}  # [win]
+  run_exports:
+    # so name changes in bugfix revisions.  Pin to bugfix revision.
+    #    https://abi-laboratory.pro/tracker/timeline/proj/
+    - {{ pin_subpackage('proj4', max_pin='x.x.x') }}
 
 requirements:
   build:
-    - python  # [win]
     - cmake  # [win]
     - unzip  # [not win]
     - curl
-    - vc 9  # [win and py27]
-    - vc 10  # [win and py34]
-    - vc 14  # [win and py>=35]
-  run:
-    - vc 9  # [win and py27]
-    - vc 10  # [win and py34]
-    - vc 14  # [win and py>=35]
+    - {{ compiler('c') }}
 
 test:
   commands:
@@ -51,3 +46,4 @@ extra:
   recipe-maintainers:
     - ocefpaf
     - pelson
+    - msarahan
