--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,8 +5,11 @@ package:
   version: {{ version }}
 
 source:
-  url: http://download.osgeo.org/proj/proj-{{ version }}.tar.gz
-  sha256: a792f78897482ed2c4e2af4e8a1a02e294c64e32b591a635c5294cb9d49fdc8c
+  - url: http://download.osgeo.org/proj/proj-{{ version }}.tar.gz
+    sha256: a792f78897482ed2c4e2af4e8a1a02e294c64e32b591a635c5294cb9d49fdc8c
+  - url: http://download.osgeo.org/proj/proj-datumgrid-1.7.zip
+    sha256: ffcad4453fac3b4a13ca678ef343e688496e18019f35709ef03c5f200e9fb85a
+    folder: nad
 
 build:
   number: 0
@@ -18,8 +21,6 @@ build:
 requirements:
   build:
     - cmake  # [win]
-    - unzip  # [not win]
-    - curl
     - {{ compiler('c') }}
 
 test:
