--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,7 @@ source:
     sha256: a792f78897482ed2c4e2af4e8a1a02e294c64e32b591a635c5294cb9d49fdc8c
   - url: http://download.osgeo.org/proj/proj-datumgrid-1.6.zip
     folder: nad
+    sha256: 054e7b63b474926c79f25fbe5cd8760351e8d93e5a167b5473e993c01bb08866
 
 build:
   number: 5
@@ -20,8 +21,6 @@ build:
 requirements:
   build:
     - cmake  # [win]
-    - unzip  # [not win]
-    - curl
     - {{ compiler('c') }}
 
 test:
