--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,12 +25,13 @@ requirements:
     - patch     # [not win]
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-    - sqlite     # [build_platform != target_platform]
   host:
-    - sqlite
-    - libtiff
-    - libcurl
+    - sqlite {{ sqlite }}
+    - libtiff {{ libtiff }}
+    - libcurl 7.88.1
+    - nlohmann_json 3.11.2
   run:
+    # bounds through run_exports
     - sqlite
     - libtiff
     - libcurl
@@ -56,9 +57,12 @@ about:
   license_family: MIT
   license_file: COPYING
   summary: Cartographic Projections and Coordinate Transformations Library
+  description: |
+    PROJ is a generic coordinate transformation software that transforms geospatial 
+    coordinates from one coordinate reference system (CRS) to another. 
+    This includes cartographic projections as well as geodetic transformations.
   dev_url: https://github.com/OSGeo/PROJ
   doc_url: https://proj.org/index.html
-  doc_src_url: https://github.com/OSGeo/PROJ/tree/master/docs
 
 extra:
   recipe-maintainers:
