--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,7 +29,7 @@ requirements:
     - {{ compiler('cxx') }}
   host:
     - sqlite {{ sqlite }}
-    - libtiff 4.7.0
+    - libtiff {{ libtiff }}
     - libcurl {{ libcurl }}
     - nlohmann_json 3.11.2
     - gtest 1.14.0 # [unix]
