--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
     - define_OLD_BUGGY_REMQUO.patch
 
 build:
-  number: 0
+  number: 1
   run_exports:
     # so name changes in bugfix revisions.  Pin to bugfix revision.
     #    https://abi-laboratory.pro/tracker/timeline/proj/
@@ -30,7 +30,7 @@ requirements:
   host:
     - sqlite {{ sqlite }}
     - libtiff {{ libtiff }}
-    - libcurl 7.88.1
+    - libcurl {{ libcurl }}
     - nlohmann_json 3.11.2
     - gtest 1.14.0 # [unix]
   run:
